Update to the profile adjustment

--- a/week-01/index.html
+++ b/week-01/index.html
@@ -21,7 +21,8 @@
         <div class="intro">
             <p>Graduate student @ USC</p>
             <p>Professional Makeup Artist</p>
-            <img class="profile" src="image/Profile.jpg" alt="profile of Jocelyn Wang">
+            <img class="profile" src="image/Profile.jpg" height="200px
+        " alt="profile of Jocelyn Wang">
         </div>
     <h3>Life Journey</h3>
         <ol>
