--- a/week-01/index.html
+++ b/week-01/index.html
@@ -15,6 +15,7 @@
         <header>
             <h1>Jocelyn Wang</h1>
             <h2>王梓桐</h2>
+            <h3>Rednote Homepage: <a href="https://www.xiaohongshu.com/user/profile/5d1df7ae00000000160233b4?xsec_token=YBahNB3KoJzlhEZo_O1sEWl35oKP69pVzxUHOXZiPuSAs=&xsec_source=app_share&xhsshare=CopyLink&shareRedId=N0ozREk8RU42NzUyOTgwNjc5OTk3OEg9&apptime=1758436521&share_id=0680658a3d044438800783a6c449e009">稻田舞Mai</a></h3>
         </header>
 
     <main>
