--- a/week-03/projects.html
+++ b/week-03/projects.html
@@ -3,58 +3,74 @@ I programmed this webpage by myself. I asked ChatGPT for help on some specific a
 -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Jocelyn Wang — Portfolio</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    
-    <body>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-        <div class="container">
-            <header>
-                <h1>王梓桐 Jocelyn Wang</h1>
-             </header>
+<body>
 
-        <main>
-            <div class="intro">
-                <p>Graduate Student @ USC ｜Designer | Professional Makeup Artist｜<a href="https://www.xiaohongshu.com/user/profile/5d1df7ae00000000160233b4?xsec_token=YBahNB3KoJzlhEZo_O1sEWl35oKP69pVzxUHOXZiPuSAs=&xsec_source=app_share&xhsshare=CopyLink&shareRedId=N0ozREk8RU42NzUyOTgwNjc5OTk3OEg9&apptime=1758436521&share_id=0680658a3d044438800783a6c449e009">Rednote Blogger</a></p>
-                 <img class="profile" src="image/Profile.jpg" alt="profile of Jocelyn Wang">
-             </div>
+    <div class="container">
+        <header>
+            <h1>JOCELYN WANG</h1>
+        </header>
 
-             <div>
-                <p class="Motto">"CREATE LEGENDS. LIVE LONG. FIND PEACE."*</p> 
-                <p id="Motto-footer">*Aging with craft. Producing with heart, Jocelyn, 2025</p>
-             </div>
 
-             <div class="Life-Journey">
-                <h3>Life Journey</h3>
-                    <ol>
-                         <li>2001: Born and raised in Lanzhou, Gansu, China</li>
-                         <li>2019: Began undergraduate studies at Tongji University, Shanghai, China</li>
-                         <li>2023: Began working in Shanghai, China
-                         <li>2025: Moved to Los Angeles to pursue graduate studies </li>
-                         </li>
-                     </ol>
-             </div>
-
-             <div class="Skills">
-             <h3>Skills</h3>
-             <ul>
-                 <li>Design: Strong design skills with creative problem-solving and visual polish</li>
-                 <li>Makeup & Hairstyling: Specialized at clean makeup style </li>
-                 <li>Coordination & Execution: Excellent at coordinating tasks and executing plans with efficiency and reliability</li>
-             </ul>
-                </div>
-        </main>
+        <div class="intro">
+            <p>Graduate Student @ USC ｜Designer | Professional Makeup Artist｜<a
+                    href="https://www.xiaohongshu.com/user/profile/5d1df7ae00000000160233b4?xsec_token=YBahNB3KoJzlhEZo_O1sEWl35oKP69pVzxUHOXZiPuSAs=&xsec_source=app_share&xhsshare=CopyLink&shareRedId=N0ozREk8RU42NzUyOTgwNjc5OTk3OEg9&apptime=1758436521&share_id=0680658a3d044438800783a6c449e009">Rednote
+                    Blogger</a></p>
         </div>
+        <nav class="nav-bar">
+            <a href="index.html" class="nav-link">This is Jocelyn</a>
+            <a href="projects.html" class="nav-link active">Projects</a>
+        </nav>
+    </div>
 
-        <footer class="footer">
-            <p>copyright © 2025 Jocelyn Wang</p>
-        </footer>
+    <section class="projects">
+        <div class="project-card">
+            <div class="card-image">
+                <img src="image/project1.jpg" alt="Brand Identity Design">
+            </div>
+            <div class="card-content">
+                <div class="project-meta">
+                    <span class="project-category">BRAND IDENTITY</span>
+                    <span class="project-year">2024</span>
+                </div>
+                <h3 class="project-title">LUMINARA Cosmetics</h3>
+                <p class="project-description">Complete brand identity system including logo design, packaging, and
+                    visual language for a luxury skincare line.</p>
+                <div class="project-tags">
+                    <span>Logo Design</span>
+                    <span>Packaging</span>
+                    <span>Art Direction</span>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="card-image">
+                <img src="image/project2.jpg" alt="Editorial Design">
+            </div>
+            <div class="card-content">
+                <div class="project-meta">
+                    <span class="project-category">BRAND IDENTITY</span>
+                    <span class="project-year">2024</span>
+                </div>
+                <h3 class="project-title">LUMINARA Cosmetics</h3>
+                <p class="project-description">Complete brand identity system including logo design, packaging,
+                    and visual language for a luxury skincare line.</p>
+                <div class="project-tags">
+                    <span>Logo Design</span>
+                    <span>Packaging</span>
+                    <span>Art Direction</span>
+                </div>
+            </div>
+        </div>
+    </section>
     </body>
-    
 </html>
