--- a/week-03/projects.html
+++ b/week-03/projects.html
@@ -32,7 +32,7 @@ I programmed this webpage by myself. I asked ChatGPT for help on some specific a
         </nav>
     </div>
 
-    <section class="projects">
+    <section class="projects-section">
         <div class="project-card">
             <div class="card-image">
                 <img src="image/project1.jpg" alt="Brand Identity Design">
@@ -71,6 +71,84 @@ I programmed this webpage by myself. I asked ChatGPT for help on some specific a
                 </div>
             </div>
         </div>
+        <div class="project-card">
+            <div class="card-image">
+                <img src="image/project2.jpg" alt="Editorial Design">
+            </div>
+            <div class="card-content">
+                <div class="project-meta">
+                    <span class="project-category">BRAND IDENTITY</span>
+                    <span class="project-year">2024</span>
+                </div>
+                <h3 class="project-title">LUMINARA Cosmetics</h3>
+                <p class="project-description">Complete brand identity system including logo design, packaging,
+                    and visual language for a luxury skincare line.</p>
+                <div class="project-tags">
+                    <span>Logo Design</span>
+                    <span>Packaging</span>
+                    <span>Art Direction</span>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="card-image">
+                <img src="image/project2.jpg" alt="Editorial Design">
+            </div>
+            <div class="card-content">
+                <div class="project-meta">
+                    <span class="project-category">BRAND IDENTITY</span>
+                    <span class="project-year">2024</span>
+                </div>
+                <h3 class="project-title">LUMINARA Cosmetics</h3>
+                <p class="project-description">Complete brand identity system including logo design, packaging,
+                    and visual language for a luxury skincare line.</p>
+                <div class="project-tags">
+                    <span>Logo Design</span>
+                    <span>Packaging</span>
+                    <span>Art Direction</span>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="card-image">
+                <img src="image/project2.jpg" alt="Editorial Design">
+            </div>
+            <div class="card-content">
+                <div class="project-meta">
+                    <span class="project-category">BRAND IDENTITY</span>
+                    <span class="project-year">2024</span>
+                </div>
+                <h3 class="project-title">LUMINARA Cosmetics</h3>
+                <p class="project-description">Complete brand identity system including logo design, packaging,
+                    and visual language for a luxury skincare line.</p>
+                <div class="project-tags">
+                    <span>Logo Design</span>
+                    <span>Packaging</span>
+                    <span>Art Direction</span>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="card-image">
+                <img src="image/project2.jpg" alt="Editorial Design">
+            </div>
+            <div class="card-content">
+                <div class="project-meta">
+                    <span class="project-category">BRAND IDENTITY</span>
+                    <span class="project-year">2024</span>
+                </div>
+                <h3 class="project-title">LUMINARA Cosmetics</h3>
+                <p class="project-description">Complete brand identity system including logo design, packaging,
+                    and visual language for a luxury skincare line.</p>
+                <div class="project-tags">
+                    <span>Logo Design</span>
+                    <span>Packaging</span>
+                    <span>Art Direction</span>
+                </div>
+            </div>
+        </div>
+
     </section>
-    </body>
+</body>
+
 </html>
